# tinycg

./: .gitignore  CMakeLists.txt
include/: geometry.hpp  model.h
src/: CMakeLists.txt  geometry.cpp  main.cpp  model.cpp
tests/: CMakeLists.txt  maintest.cpp
